--- a/v/ve/vel/velnetweb.co.uk.html
+++ b/v/ve/vel/velnetweb.co.uk.html
@@ -1,45 +1,97 @@
-<!--The following is the downloaded HTML source of the velnetweb.co.uk privacy policy that was archived on 2004-06-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040630234621id_/http%3A//www.velnetweb.co.uk/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the velnetweb.co.uk privacy policy that was archived on 2008-03-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080302044539id_/http%3A//www.velnetweb.co.uk/terms.php) for the most accurate reproduction.-->
 
-<html><head>
-<title>Privacy</title>
-<meta name="description" content="Privacy VelnetWeb Internet Web Hosting Domain Names Web Design e-cOMMERCE UK">
-<meta name="keywords" content="Privacy, VelnetWeb Internet, web hosting, domain names, web design, e-commerce UK">
-<meta name="coverage" content="worldwide">
-<meta name="Content-Language" content="English">
-<meta name="resource-type" content="document">
-<meta name="robot" content="index, follow">
-<meta name="rating" content="General">
-<meta name="revisit-after" content="7 days">
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title>Velnetweb - Terms &amp; Conditions</title>
+<meta name="Description" content="inside">
+<meta name="Keywords" content="inside">
+<link href="/inside_style.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+<!--
+.style24 {	color: #389566;
+	font-weight: bold;
+}
+-->
+</style>
 </head>
-<body>
-<h1>Privacy</h1>
-<p> This site is committed to protecting the privacy of its customers. This privacy policy applies to the use of our website including the services and products provided through our website.</p>
-<p> How your information is used</p>
-<p>You supply certain information when you sign up with us as a customer. This information includes your name, the name of your business, your postal address, email address, telephone number, fax number and how you heard of us. This information will be used in the management of our database and to enable us contact you about the service you have requested.<br>
-  We may also use your email address to send you one special offers. If you wish you may opt out from receiving these offers.</p>
-<p>In addition, when you use our website we may store your IP address and may use this information to administer our website and help to diagnose any network or server problems. Our website does not use cookies at present but we may introduced the use of cookies in the future to make your use of Velnet Search a better experience. If you do not want Velnet Search or any other site to store cookies in your browser you may configure your browser NOT to accept cookies</p>
-<p><br>
-  Information we share with others</p>
-<p>Velnet Search will not divulge your personal information to a third party. The following circumstances are however an exemption:</p>
-<p>In order to register a domain name we are required to send your name or/and business name, postal address and email address to organisations that formally record the registration; this information may be available to others via a "Whois" search;</p>
-<p>If we are required to do so by law or a statutory body;</p>
-<p>To a financial institution with whom we hold an account for the purpose of verifying credit status and / or validating financial transactions.</p>
-<p>Velnet Search is not responsible for the privacy policy of other companies or website.</p>
-<p><br>
-  Credit Cards</p>
-<p>WorldPay processes credit card payment for Velnet Search. WorldPay collects your credit card details over a secure server to guarantee your privacy. Velnet Search does not collect or store your credit card details.</p>
-<p><br>
-  Links to other sites and banner advertisements</p>
-<p>Velnet website contains advertising and links to other websites. No personal information is passed to other websites. Velnet Search is not responsible for the privacy practices or content of linked websites. We would encourage you to read the privacy statements of other websites if you are concerned about your privacy.</p>
-<p><br>
-  Consent</p>
-<p>Use of the Velnet Search website and services indicates your consent to the collection and use of information as described in this document. Any changes to the document will be posted on this page.</p>
-<hr>
-<strong>Please use the links below to find out more about each of the above services:</strong>
-<p><a href="index.php">VelnetWeb Home</a> - <a href="web_hosting.php">Web Hosting</a> - <a href="web_design.php">Web Design</a> - <a href="domain_name_registration.php">Domain Name Registration</a> - <a href="e_commerce.php">E-commerce</a> - <a href="website_promotion.php">Website Promotion</a> - <a href="resources.php">Resources</a> - <a href="terms.php">Terms</a> - <a href="privacy.php">Privacy</a></p>
-<hr>
-VelnetWeb Internet Services The Internet Services EXPERTS!. Web Hosting - Domain Name Registration - E-commece - Web Design - London N4 3GG
+
+<body class="twoColElsRtHdr">
+
+	<div id="container">
+
+<div id="header">
+
+<div id="apDiv1"><a href="/">Home</a><a href="/domain-names/">Domain Names</a><a href="/web-hosting/">Web Hosting</a><a href="/web-design/">Web Design</a>&nbsp;<a href="http://www.velnetsupport.co.uk/" target="_blank">Support</a> </div>
+<div id="apDiv2">
+  <div id="timg"><a href="/"><img src="/v_images/velnet.gif" alt="Home" width="35" height="20" border="0"></a><a href="/site-map.php"><img src="/v_images/velnet.gif" alt="Site Map" width="30" height="20" border="0"></a><a href="/contact-us.php"><img src="/v_images/velnet.gif" alt="Contact Us" width="30" height="20" border="0"></a><a href="http://www.velnetweb.co.uk/forums/"><img src="/v_images/velnet.gif" alt="Forum" width="30" height="20" border="0"></a></div>
+<div id="topte">
+  <h1 align="center"> <br>
+    Web Hosting &amp; Domain
+    Name Registration&nbsp;&nbsp;</h1>
+</div>
+</div>
+<div id="apDiv3"><img src="/v_images/velnet.gif" alt="Velnetweb - Low cost web hosting" width="300" height="67" border="0"></div>
+</div>
+<div id="i_title">
+  <h1>Terms &amp; Conditions</h1>
+</div>
+
+<div id="i_main">
+  <div id="r_im"><img src="/v_images/page/685141_searching.jpg" alt="Profesional Web Hosting" width="300" height="210" border="0"></div>
+  <br>
+  <h2>Introduction</h2>
+  <br>
+At VELNET UK LTD we are  committed to protecting the privacy of our customers as well as users of  Velnetweb.co.uk&nbsp; within the guidelines  and regulations that governs our <a href="http://velnetweb.co.uk/terms.php/">services</a>.  This privacy policy applies to the use of our website including the services  and products provided through it and also where applicable what we do with the  information collected from customers and users of the Velnet website.
+<h3>Information  Collected</h3>
+
+You may be prompted to  supply certain information when you sign up with us as a customer on through a  request form online. This information usually includes personal information  such as;
+<ul>
+  <li>your name, </li>
+  <li>the name of your business, </li>
+  <li>your postal address, </li>
+  <li>email address, </li>
+  <li>telephone number, </li>
+  <li>fax number </li>
+  <li>and how you heard of us. </li>
+</ul>
+<h3>Information Use</h3> 
+ This information will be used in the management of our  database and to enable us contact you about the service/products you have  requested for. You may also be contacted via your email address in order&nbsp; to send you one special offers. If you wish  you may opt out from receiving these offers. We may also use your information  for the purpose of research to confirm how effective certain sales or promotion  is, but whatever we may use your information for you are rest assured that  Velnet UK Ltd will not release this information to a third party for a fee or  for free
+ <h3>Log Files</h3>
+ Velnet as it is common now  in most standard Websites stores log files. This information may include your  Internet protocol (IP) addresses, Internet service provider (ISP), browser  type, referrer, browsed pages, date &amp; time stamp, and number of clicks to  analyse trends. We may use this information to administer our website and help  to diagnose any network or server problems.
+ <h3>Cookies </h3>
+ Your Internet browser has the  in-built facility for storing small files- "cookies" - that hold  information which allows a website to recognise your account. Our website takes  advantage of this facility to enhance your experience. You have the ability to  prevent your computer from accepting cookies but, if you do, certain  functionality on the website may be impaired. If you do not want  Velnetweb.co.uk or any other site to store cookies in your browser you may  configure your browser NOT to accept cookies
+ <h3>Disclosing Information</h3>
+ 
+Although Velnetweb.co.uk  will not divulge your personal information to a third party, the following  circumstances are however an exemption:
+<ul>
+  <li>In order to register a domain name we are  required to send your name or/and business name, postal address and email  address to organisations that formally record the registration; this  information may be available to others via a "Whois" search;</li>
+  <li>If we are required to do so by law or a  statutory body;</li>
+  <li>To a financial institution with whom we hold an  account for the purpose of verifying credit status and / or validating  financial transactions. </li>
+</ul>
+Velnetweb.co.uk is not  responsible for the privacy policy of other companies or website.
+<h3>Credit Cards</h3>
+ A third party processes  online credit card payment for Velnetweb.co.uk. Your credit card details given  online by you is collected over an encrypted secure server to guarantee your  privacy and data security. Velnetweb.co.uk does not collect or store your  credit card details.
+ <h3>Links to other sites and banner advertisements</h3>
+ The velnetweb.co.uk  contains advertising and links to other websites but no personal information is  passed to other websites. Please be aware that we are not responsible for the  privacy practices of such other sites and you are advised to read the privacy  statements of each and every website that collects personally identifiable  information if you are concerned about your privacy. This herein described  Privacy Policy applies solely to information collected by velnetweb.co.uk.
+ <h3>Consent</h3>
+ Use of the Velnetweb.co.uk  website and services indicates your consent to the collection and use of  information as described in this document. Any changes to the document will be  posted on this page.
+ <h3>Changes to this Policy</h3>
+ Any changes to this Privacy Policy will be placed here and will  supersede this version of our Policy. We will take reasonable steps to draw  your attention to any changes in our Policy. However, to be on the safe side,  we suggest that you read this document each time you use the website to ensure  that it still meets with your approval.</div>
+
+<div id="space2"></div>
+
+<div id="footer"><a href="/">Home</a><a href="/domain-names/">Domain Names</a><a href="/web-hosting/">Web Hosting</a><a href="/web-design/">Web Design</a><a href="/e-commerce/">E-commerce</a><a href="/ssl/">SSL Business</a><a href="/site-map.php">Site Map</a><a href="/terms.php">Privacy</a></div>
+<div id="copyr">Copyright ©2007 velnetweb.co.uk - VelnetWeb Internet services, London N4. </div>
+<!--<div id="footlink"></div> -->
+	</div>
+
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
+<script type="text/javascript">
+_uacct = "UA-3013248-2";
+urchinTracker();
+</script>
+
 
 </body></html>
