--- a/t/ti/tim/timetoast.com.html
+++ b/t/ti/tim/timetoast.com.html
@@ -1,61 +1,52 @@
-<!--The following is the downloaded HTML source of the timetoast.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217130807id_/http%3A//www.timetoast.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the timetoast.com privacy policy that was archived on 2009-06-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090609223814id_/http%3A//www.timetoast.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta name="verify-v1" content="IGAi+zdX51OndSgll60+x+Qy4vXffGc2wACR/Xe4YpU=">
 
 <title>Timetoast timelines - Privacy</title>
 
-<link href="/stylesheets/master.css?1219587147" media="screen" rel="stylesheet" type="text/css">
-<link href="/stylesheets/style.css?1219587147" media="screen" rel="stylesheet" type="text/css">
+<link href="http://media.timetoast.com/stylesheets/master.css?1244559016" media="screen" rel="stylesheet" type="text/css">
+<link href="http://media.timetoast.com/stylesheets/style.css?1244559016" media="screen" rel="stylesheet" type="text/css">
 
 
 <meta name="description" content="The terms and conditions for Timetoast timelines">
 
 
 
-<meta name="keywords" content="timeline, interactive, creator, create, historical, time, visualization, chronology, reference">
+<meta name="keywords" content="timeline, interactive, create, historical, time, visualization, chronology, chronological, reference">
 
 
 
-<script src="/javascripts/swfobject.js?1219587147" type="text/javascript"></script>
-<script src="/javascripts/prototype.js?1219587147" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1219587147" type="text/javascript"></script>
+<script src="http://media.timetoast.com/javascripts/swfobject.js?1244559016" type="text/javascript"></script>
+<script src="http://media.timetoast.com/javascripts/prototype.js?1244559016" type="text/javascript"></script>
+<script src="http://media.timetoast.com/javascripts/effects.js?1244559016" type="text/javascript"></script>
 
-<!-- start analytics -->
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
-<script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-1375530-2");
-pageTracker._initData();
-pageTracker._trackPageview();
-</script>
-<!-- end analytics -->
+
 
 </head>
 <body>
 <div id="container">
-	<div id="header">
-    <div id="headerNav">
-      <ul>
-       	<li><a href="/">home</a><span class="divider">.</span></li>
-		<li><a href="/signup">sign up!</a><span class="divider">.</span></li>
-		<li><a href="/timelines">your timelines</a><span class="smallDivider">.</span></li>
-        <li><a href="/login">log in</a></li>
-
-      </ul>
+	<!--– google_ad_section_start(weight=ignore) –-->
+<div id="header">
+	<div id="headerLogo"><a href="/"><img alt="timetoast logo" class="logo" src="http://media.timetoast.com/images/hdr_timetoast.png?1244559016" title="home"></a></div>
+	<div id="headerNav">
+    	<ul>
+		
+			<li><a href="/categories">browse</a><span class="smallDivider">.</span></li>
+			<li><a href="/signup">sign up!</a><span class="smallDivider">.</span></li>	
+        	<li><a href="/login">log in</a></li>
+      	
+		</ul>
 		<div id="search">
-		<form action="/search/timelines" method="post">
+			<form action="/search/timelines" method="post">
 			<input id="searchterm" name="searchterm" type="text">
-			<input alt="search" id="searchbutton" src="/images/btn_search.jpg?1219587147" type="image">
-		</form>
+			<input alt="search" id="searchbutton" src="http://media.timetoast.com/images/btn_search.jpg?1244559016" type="image">
+			</form>
 		</div>     
-  </div>
-  <div class="timetoastLogo"><a href="/"><img alt="timetoast" class="logo" src="/images/hdr_timetoast.png?1219587147"></a></div>
+	</div>
 </div>
+<!--– google_ad_section_end –-->
 	<div id="content">
 		<div id="contentPadding">
 			<h1>Privacy Policy</h1>
@@ -72,16 +63,39 @@ pageTracker._trackPageview();
 <p>	A cookie is a string of information that a website stores on a visitor’s computer, and that the visitor’s browser provides to the website each time the visitor returns. Timetoast uses cookies to help Timetoast identify and track visitors, their usage of Timetoast website, and their website access preferences. Timetoast visitors who do not wish to have cookies placed on their computers should set their browsers to refuse cookies before using Timetoast’s websites, with the drawback that certain features of Timetoast’s websites may not function properly without the aid of cookies.</p>
 <h2>Privacy Policy Changes</h2>
 <p>	Although most changes are likely to be minor, Timetoast may change its Privacy Policy from time to time, and in Timetoast’s sole discretion. Timetoast encourages visitors to frequently check this page for any changes to its Privacy Policy. If you have a Timetoast.com account, you should also check the 'your timelines' dashboard for alerts to these changes. Your continued use of this site after any change in this Privacy Policy will constitute your acceptance of such change.</p>
-<p>Last updated: 8th July</p>	
+<p>Last updated: 8th July, 2008</p>
 		</div>
+		<div class="clear"></div>
 	</div>
-	<div class="clear"></div>
+	<!--– google_ad_section_start(weight=ignore) –-->
 	<div id="footer">
 		  
-			<span class="footerText">Copyright © 2008 timetoast, All rights reserved.</span><span class="footerNav"><a href="/about">about</a><span class="smallDivider">|</span><a href="/faq">faq</a><span class="smallDivider">|</span><a href="/privacy">privacy</a><span class="smallDivider">|</span><a href="/pages/terms_and_conditions" onclick="window.open(this.href,'new_window','height=500,width=790,resizable=1,toolbar=0,scrollbars=1,location=0,statusbar=0,menubar=0');return false;">terms</a><span class="smallDivider">|</span><a href="/users/new">sign up!</a>&nbsp;|&nbsp;<a href="/sessions/new">log in</a><a href="/"><img alt="Logo_toast" src="/images/logo_toast.jpg?1219587147"></a></span>
+			<div class="footerText">Copyright © 2009 timetoast, All rights reserved.</div><span class="footerNav"><a href="/about">about</a><span class="smallDivider">|</span><a href="/faq">faq</a><span class="smallDivider">|</span><a href="/privacy">privacy</a><span class="smallDivider">|</span><a href="/pages/terms_and_conditions" onclick="window.open(this.href,'new_window','height=500,width=790,resizable=1,toolbar=0,scrollbars=1,location=0,statusbar=0,menubar=0');return false;">terms</a><span class="smallDivider">|</span><a href="/users/new">sign up!</a><span class="smallDivider">|</span><a href="/sessions/new">log in</a><a href="/"><img alt="Logo_toast" src="http://media.timetoast.com/images/logo_toast.jpg?1244559016"></a></span>
 		
 	</div>
-	<div class="clear"></div>
+	<!--– google_ad_section_end –-->
 </div>
 
+<!-- Start Quantcast tag -->
+<script type="text/javascript">
+_qoptions={
+qacct:"p-2eYnEaVmgyyns"
+};
+</script>
+<script type="text/javascript" src="http://edge.quantserve.com/quant.js"></script>
+<noscript>
+<img src="http://pixel.quantserve.com/pixel/p-2eYnEaVmgyyns.gif" style="display: none;" border="0" height="1" width="1" alt="Quantcast"/>
+</noscript>
+<!-- End Quantcast tag -->
+<!-- start analytics -->
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+var pageTracker = _gat._getTracker("UA-1375530-2");
+pageTracker._initData();
+pageTracker._trackPageview();
+</script>
+<!-- end analytics -->
 </body></html>
