--- a/d/do/dob/doba.com.html
+++ b/d/do/dob/doba.com.html
@@ -1,10 +1,10 @@
-<!--The following is the downloaded HTML source of the doba.com privacy policy that was archived on 2008-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081218215818id_/http%3A//www.doba.com/site/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the doba.com privacy policy that was archived on 2009-06-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090609233318id_/http%3A//www.doba.com/site/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 	<meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
 	
-			<title>Privacy Policy | Doba</title>
+					<title>Privacy Policy | Doba</title>
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 
@@ -18,20 +18,26 @@
 		table.col2 td { width: 260px; }
 	</style>
 	
-	
+		
 	<meta name="section" content="site">
 	<link rel="shortcut icon" href="/site/images/dot.ico">
 
-	<link rel="stylesheet" type="text/css" href="/site/style/global-76.css" media="all">
-	<link rel="stylesheet" type="text/css" href="/site/style/sub_site-5.css" media="all">
-	<link rel="stylesheet" type="text/css" href="/site/style/buttons-39.css" media="all">
+	<link rel="stylesheet" type="text/css" href="/site/style/global-99.css" media="all">
+	<link rel="stylesheet" type="text/css" href="/site/style/sub_site-9.css" media="all">
 		<!-- [name: site] [media: all] -->
 	<link rel="stylesheet" type="text/css" href="/site/style/print-6.css" media="print">
-	<link rel="stylesheet" type="text/css" href="/site/style/pagination-10.css" media="all">
+	<link rel="stylesheet" type="text/css" href="/site/style/pagination-11.css" media="all">
 
-	<script language="JavaScript" type="text/javascript" src="/site/scripts/popup-21.js"></script>
-	<script language="JavaScript" type="text/javascript" src="/site/scripts/dhtml_lib-21.js"></script>
+	<script language="JavaScript" type="text/javascript" src="/site/scripts/popup-22.js"></script>
+	<script language="JavaScript" type="text/javascript" src="/site/scripts/dhtml_lib-22.js"></script>
 	<script language="JavaScript" type="text/javascript" src="/site/scripts/ufo-4.js"></script>
+	<script language="JavaScript" type="text/javascript" src="/static/scripts/mbox.js"></script>
+	
+	<script language="JavaScript" type="text/javascript" src="/site/scripts/xlib-20.js"></script>
+	<script type="text/javascript" defer="true">
+		enableCustomMiniWin = true;
+	</script>
+	<script language="JavaScript" type="text/javascript" src="/site/scripts/enable_custom_boxes-8.js"></script>		
 	
 	<script language="javascript" type="text/javascript">
 	if (self!= top) { top.location.href = self.location.href; }
@@ -49,13 +55,14 @@
 			</div>
 
 		<div id="navbar_on_preloader"></div><div id="navbar_hover_preloader"></div><ul id="navbar"><li id="welcome"><a href="/"></a></li><li id="browseproducts"><a href="/catalog?clear_filter"></a></li><li id="howdobaworks"><a href="/how"></a></li><li id="whyus"><a href="/why"></a></li><li id="services"><a href="/services"></a></li><li id="freetrial"><a href="/more"></a></li></ul>
+		<a id="freenewsletter_btn" href="#" onclick="return MiniWin('/site/free-newsletter.php', 300, 277);">&nbsp;</a>
 	
 	<div id="main" class="main_columns_1">
 		<div id="main_top" class="main_top_basic">&nbsp;</div>
 		<div id="main_middle">
 			
 			<div id="main_col_center">
-					<div class="pe_standard">
+										<div class="pe_standard">
 			<h1>Privacy Policy</h1>
 	<p>Please take a minute to read the following policy so you understand how we use the personal information we ask you to submit. If you use any of Doba's services, you agree to these terms.</p><ul class="below_header"><li> <a href="#p1">Our commitment to privacy</a></li><li> <a href="#p2">The information we collect</a></li><li> <a href="#p3">How we use information</a></li><li> <a href="#p8">Communications from Doba</a></li><li> <a href="#p9">Sharing—Third parties</a></li><li> <a href="#p4">Our commitment to data security</a></li><li> <a href="#p5">Our commitment to children's privacy</a></li><li> <a href="#p6">How to access or correct your information</a></li><li> <a href="#p7">How to contact us</a></li></ul><p><a name="p1"></a><strong>Our commitment to privacy</strong></p><p>Your privacy is important to us. To better protect your privacy we provide this notice explaining our online information practices and the choices you can make about the way your information is collected and used. To make this notice easy to find, we make it available from our footer navigation that is found on every page of our website. When you register at Doba, we ask you for personal information. We use this information to process your orders, conduct account verifications, and to communicate with you about the status of your orders. We also use your email address to send you newsletters you are subscribed to during registration, as well as messages about Doba special offers, promotional announcements and consumer surveys. Occasionally, we send our customers special offers and promotional information via postal mail, using the shipping address provided. If you no longer want to receive the newsletters or other announcements simply unsubscribe by checking the unsubscribe links.</p><p><a name="p2"></a><strong>The information we collect</strong></p><p>This notice applies to all information collected or submitted on the Doba website. On some pages, you can order memberships, order products, make requests, and register to receive materials. The types of personal information collected at these pages are:</p><ul class="below_header"><li> Name</li><li> Billing address</li><li> Email address</li><li> State driver's license number</li><li> Phone number</li><li> Credit/debit card information</li><li> Unique identifiers (such as username and password)</li><li> Federal EIN</li><li> State sales tax ID</li></ul><p>On some pages, you can submit information about other people. For example, if you order a product and want it drop shipped directly to your customer, you will need to submit their address. In this circumstance, the types of personal information collected are:</p><ul class="below_header"><li> Name</li><li> Shipping address</li><li> Phone number</li><li> Email</li></ul><p><a name="p3"></a><strong>How we use information</strong></p><p>The primary use of your personal information, other than directly in connection with a purchase, is to efficiently provide you with personalized, relevant information.</p><p>We also use registration information to let you know about new features or other offers of interest from us and to address customer service needs and requests.</p><ul class="below_header"><li> Cookies<br><br>Contrary to popular myth, cookies do not extract private or personal information from your computer's memory, but rather, record only information you volunteer to us upon registering or visiting the site. Cookies are tiny files placed onto the hard drive of your computer when you register at our Web site that enable our server to recognize or "remember" who you are each time you return. Cookies can be removed by following Internet browser help file directions.</li><li> Log files<br><br>Like most standard website servers we use log files. This includes Internet protocol (IP) addresses, browser type, Internet service provider (ISP), referring/exit pages, platform type, date/time stamp, and number of clicks to analyze trends, administer the site, track user's movement in the aggregate, and gather broad demographic information for aggregate use. IP addresses, etc. are not linked to personally identifiable information.</li></ul><p><a name="p8"></a><strong>Communications from Doba</strong></p><ul class="below_header"><li> Special offers and updates<br><br>We send all new members a welcoming email to verify password and username. Established members will occasionally receive information on products, services, special deals, and a newsletter. Out of respect for the privacy of our users we present the option to not receive these types of communications. We also send all registrants special offers and updates regarding our services. If you are a former customer, you will continue to receive special offers and updates regarding our services unless you choose to unsubscribe from such communications.</li><li> Newsletter<br><br>If a user wishes to subscribe to our newsletter, we ask for contact information such as name and email address. Out of respect for our users privacy, we provide a way to opt-out of these communications.</li><li> Service announcements<br><br>On rare occasions it is necessary to send out a strictly service-related announcement. For instance, if our service is temporarily suspended for maintenance we might send users an email. Generally, users may not opt-out of these communications, though they can deactivate their account. However, these communications are not promotional in nature.</li><li> Customer service<br><br>We communicate with users on a regular basis to provide requested services and in regard to issues relating to their account we reply via email or phone, in accordance with the user's wishes.</li><li> Other<br><br>During the registration process, we collect phone information so that we may call you for the purpose of preventing fraud during the ordering process of Doba products. We also will call you during the first several weeks of your trial or service to provide answers to any questions as well as to offer additional promotions only available via phone. After the first several weeks of your trial or service, we, or our authorized marketing partners, may periodically contact you for the purposes of improving our services by asking you to answer questions or complete surveys or by offering you other services that we feel you may benefit from.</li></ul><p><a name="p9"></a><strong>Sharing—Third parties</strong></p><p>Doba will not disclose your personal information provided in connection with membership registration or purchases, except with your knowledge and consent as described in this Privacy Policy or as may be required by law, or to protect the rights or property of Doba.</p><p>Information submitted by you online (such as information about products you purchase from us, your name, address, email address) may be shared with companies with which we have a commercial relationship, including companies through which you reached Doba. For example, if you make a purchase with us because of a special offer made through another site acting as a distributor of our products, in that circumstance you will be considered their customer as well.</p><p>We will not, except as may be required by law, share with any other party your password or payment information. We may also share information about you (including name, email address, phone number, and postal address) to our marketing partners or other companies with whom we have a commercial relationship so they may contact you about information and services that we feel you would benefit from.</p><p>We also reserve the right to disclose aggregated user statistics, such as "45% of our users are female" in order to describe our services to prospective partners, advertisers, and other third parties. Under protection of confidentiality agreements, Doba may match common user information, such as name, address and phone number with third party data to avoid duplication and prevent errors.</p><p><a name="p4"></a><strong>Our commitment to data security</strong></p><p>Doba takes every precaution to protect our users' information. When users submit sensitive information via the website, their information is protected both online and off-line.</p><p>When our registration/order form asks users to enter sensitive information (such as credit card number), that information is encrypted and is protected with the best encryption software in the industry - SSL. While on a secure page, such as our order form, the lock icon on the bottom of Web browsers such as Netscape Navigator and Microsoft Internet Explorer becomes locked, as opposed to un-locked, or open, when users are just "surfing."</p><p>While we use SSL encryption to protect sensitive information online, we also do everything in our power to protect user-information off-line. All of our users' information, not just the sensitive information mentioned above, is restricted in our offices. Only employees who need the information to perform a specific job (for example, our billing clerk or a customer service representative) are granted access to personally identifiable information. Furthermore, ALL employees are kept up-to-date on our security and privacy practices. Finally, the servers that store personally identifiable information are in a secure environment, behind a locked cage in a locked facility.</p><p>Doba reserves the right to make any amendments, modifications or changes to this Privacy Policy at any time.  If any material change is made to this Privacy Policy, we will notify our users about those changes via email.  If you do not agree to such changes, you can modify your notification settings to opt out of certain notices from Doba or its marketing partners. If users have any questions about the security at our website, users can send an email to support@doba.com.</p><p><a name="p5"></a><strong>Our commitment to children's privacy</strong></p><p>Protecting the privacy of the very young is especially important. For that reason, we never collect or maintain information at our website from those we actually know are under 13, and no part of our website is structured to attract anyone under 13.  In order to subscribe to Doba's services, the member must be 18 with a valid credit card.</p><p><a name="p6"></a><strong>How you can access or correct your information</strong></p><p>You can access your personally identifiable information collected by Doba by logging into your account and visiting the "Settings" section of the website. You can correct factual errors in your personally identifiable information by sending us a request that credibly shows error. To protect your privacy and security, we will also take reasonable steps to verify your identity before granting access or making corrections.</p><p><a name="p7"></a><strong>How to contact us</strong></p><p>Should you have other questions or concerns about these privacy policies, please call us at 877-321-DOBA or send us an email at support@doba.com.</p>
 
@@ -63,7 +70,7 @@
 	<p class="fineprint">Last updated on May 27, 2008.</p>
 
 	</div>
-			</div>
+							</div>
 
 					</div>
 		<div id="main_bottom" class=""></div>
@@ -82,18 +89,14 @@
 				<li><a href="/site/sitemap.html">Site Map</a></li>
 				<li class="last"><a href="/company/contact.html">Contact Us</a></li>
 			</ul>
-				<div id="copyright"><span>Copyright © 2008 Doba.  All Rights Reserved.</span></div>
+				<div id="copyright"><span>Copyright © 2009 Doba.  All Rights Reserved.</span></div>
 	</div>
 </div>
 
-<script language="JavaScript" type="text/javascript" src="/site/scripts/s_code-6.js"></script><img name="s_i_wm-wholesalemarketercom" height="1" width="1" border="0" alt="" src="https://wholesalemarketer.122.2O7.net/b/ss/wm-wholesalemarketercom/1/H.2-pdv-2/s03888709130387?[AQB]&amp;ndh=1&amp;t=31/0/2020%2014%3A31%3A15%205%200&amp;ns=wholesalemarketer&amp;pageName=/site/privacy.html&amp;g=https%3A//web.archive.org/web/20081218215818id_/http%253A//www.doba.com/site/privacy.html&amp;cc=USD&amp;ch=site&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]"><script language="JavaScript" type="text/javascript" src="/site/scripts/s_convert-5.js"></script>
-		<!-- SiteCatalyst code version: H.2.
-	Copyright 1997-2005 Omniture, Inc. More info available at
-	http://www.omniture.com -->
-	<script language="JavaScript" type="text/javascript">
-	<!--
-	/* You may give each page an identifying name, server, and channel on
-	the next lines. */
+<script language="JavaScript" type="text/javascript" src="/site/scripts/s_code-8.js"></script><script language="JavaScript" type="text/javascript" src="/site/scripts/s_convert-6.js"></script>
+		<!-- SiteCatalyst code version: H.19.4. Copyright 1997-2009 Omniture, Inc. More info available at http://www.omniture.com -->
+	<script language="JavaScript" type="text/javascript" defer="true"><!--
+	/* You may give each page an identifying name, server, and channel on the next lines. */
 	s.pageName=getPageName('/site/privacy.html');
 	s.server="";
 	s.channel="site";
@@ -103,11 +106,13 @@
 	s.prop3="";
 	s.prop4="";
 	s.prop5="";
+	s.prop6 = (typeof s__prop6 !== 'undefined') ? s__prop6 : "";  
+	
 	/* E-commerce Variables */
 	s.campaign=getSource();
 	s.state="";
 	s.zip="";
-	s.events = (s.events) ? s.events : "";
+	s.events = (typeof s__events !== 'undefined') ? s__events : "";  
 	s.products="";
 	s.purchaseID="";
 	s.eVar1=getSourceKey();
@@ -115,9 +120,18 @@
 	s.eVar3=getValFromQueryString('campaign_code');
 	s.eVar4="";
 	s.eVar5="";
+	s.eVar6="";
+	s.eVar7 = (typeof s__eVar7 !== 'undefined') ? s__eVar7 : "";  
+	
 	/************* DO NOT ALTER ANYTHING BELOW THIS LINE ! **************/
 	var s_code=s.t();if(s_code)document.write(s_code)//--></script>
-	<!--/DO NOT REMOVE/-->
-	<!-- End SiteCatalyst code version: H.2. -->
+	<script language="JavaScript" type="text/javascript"><!--
+	if(navigator.appVersion.indexOf('MSIE')>=0)document.write(unescape('%3C')+'\!-'+'-')
+	//--></script><noscript><a href="http://www.omniture.com" title="Web Analytics"><img
+	src="http://wm-wholesalemarketercom.112.2o7.net/b/ss/wm-wholesalemarketercom/1/H.19.4--NS/0"
+	height="1" width="1" border="0" alt="" /></a></noscript><!--/DO NOT REMOVE/-->
+	<!-- End SiteCatalyst code version: H.19.4. -->
+<script type="text/javascript" language="JavaScript" src="http://dce.sapha.com/engine.php?ac=1124"></script>
+<noscript><a href="http://www.sapha.com"><img src="http://dce.sapha.com/logging.php?ac=1124&amp;ns=1" border="0" alt="Sapha Conversion Suite Analytics"></a></noscript>
 
 </body></html>
